tests/errors/dynamic-share.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint L = G
   ┌─ tests/errors/dynamic-share.fil:12:11
   │
12 │   m1 := M<L>(c, d);
   │           ^ Invocation uses event L
13 │   m0 := M<G>(a, b);
   │           - Invocation uses event G
   │
   = Invocations of instance use multiple events in invocations: L and G. Sharing using multiple events is not supported.

